completed transform step including merging tables

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -1245,28 +1245,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15151</th>\n",
+       "      <th>37378</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>45000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "      <td>http://www.solomonkane.com/</td>\n",
-       "      <td>32985</td>\n",
-       "      <td>tt0970452</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 9648, 'n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>49092</td>\n",
+       "      <td>tt0035555</td>\n",
        "      <td>en</td>\n",
-       "      <td>Solomon Kane</td>\n",
-       "      <td>A nomadic 16th century warrior, condemned to h...</td>\n",
+       "      <td>Who Done It?</td>\n",
+       "      <td>Two dumb soda jerks dream of writing radio mys...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2009-09-16</td>\n",
-       "      <td>7810000.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>[{'iso_639_1': 'ar', 'name': 'العربية'}, {'iso...</td>\n",
+       "      <td>1942-11-06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
        "      <td>Released</td>\n",
-       "      <td>Fight evil... With evil.</td>\n",
-       "      <td>Solomon Kane</td>\n",
+       "      <td>Shudder through your laughter at the gayest, g...</td>\n",
+       "      <td>Who Done It?</td>\n",
        "      <td>False</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>399.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1274,26 +1274,26 @@
        "</div>"
       ],
       "text/plain": [
-       "       adult belongs_to_collection    budget  \\\n",
-       "15151  False                   NaN  45000000   \n",
+       "       adult belongs_to_collection budget  \\\n",
+       "37378  False                   NaN      0   \n",
        "\n",
-       "                                                  genres  \\\n",
-       "15151  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
+       "                                                  genres homepage     id  \\\n",
+       "37378  [{'id': 35, 'name': 'Comedy'}, {'id': 9648, 'n...      NaN  49092   \n",
        "\n",
-       "                          homepage     id    imdb_id original_language  \\\n",
-       "15151  http://www.solomonkane.com/  32985  tt0970452                en   \n",
+       "         imdb_id original_language original_title  \\\n",
+       "37378  tt0035555                en   Who Done It?   \n",
        "\n",
-       "      original_title                                           overview  ...  \\\n",
-       "15151   Solomon Kane  A nomadic 16th century warrior, condemned to h...  ...   \n",
+       "                                                overview  ... release_date  \\\n",
+       "37378  Two dumb soda jerks dream of writing radio mys...  ...   1942-11-06   \n",
        "\n",
-       "      release_date    revenue runtime  \\\n",
-       "15151   2009-09-16  7810000.0   104.0   \n",
+       "      revenue runtime                          spoken_languages    status  \\\n",
+       "37378     0.0    77.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
        "\n",
-       "                                        spoken_languages    status  \\\n",
-       "15151  [{'iso_639_1': 'ar', 'name': 'العربية'}, {'iso...  Released   \n",
+       "                                                 tagline         title  video  \\\n",
+       "37378  Shudder through your laughter at the gayest, g...  Who Done It?  False   \n",
        "\n",
-       "                        tagline         title  video vote_average vote_count  \n",
-       "15151  Fight evil... With evil.  Solomon Kane  False          5.6      399.0  \n",
+       "      vote_average vote_count  \n",
+       "37378          6.9        7.0  \n",
        "\n",
        "[1 rows x 24 columns]"
       ]
@@ -1341,11 +1341,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10110546</th>\n",
-       "      <td>104301</td>\n",
-       "      <td>4571</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1339130044</td>\n",
+       "      <th>22197807</th>\n",
+       "      <td>230417</td>\n",
+       "      <td>7199</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1478317793</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1353,7 +1353,7 @@
       ],
       "text/plain": [
        "          userId  movieId  rating   timestamp\n",
-       "10110546  104301     4571     3.0  1339130044"
+       "22197807  230417     7199     0.5  1478317793"
       ]
      },
      "execution_count": 12,
@@ -1399,39 +1399,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23050622</th>\n",
-       "      <td>239407</td>\n",
-       "      <td>3671</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1334144851</td>\n",
+       "      <th>13665623</th>\n",
+       "      <td>142012</td>\n",
+       "      <td>153</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1120008806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12213863</th>\n",
-       "      <td>126707</td>\n",
-       "      <td>1513</td>\n",
+       "      <th>12258491</th>\n",
+       "      <td>127212</td>\n",
+       "      <td>1073</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>982724582</td>\n",
+       "      <td>865423058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24631755</th>\n",
-       "      <td>255943</td>\n",
-       "      <td>33794</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1224477311</td>\n",
+       "      <th>20546169</th>\n",
+       "      <td>213499</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1344804003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11506565</th>\n",
-       "      <td>119419</td>\n",
-       "      <td>589</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1476208553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5401116</th>\n",
-       "      <td>55678</td>\n",
-       "      <td>7147</td>\n",
+       "      <th>9443457</th>\n",
+       "      <td>97477</td>\n",
+       "      <td>349</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>1478683223</td>\n",
+       "      <td>900519344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23911192</th>\n",
+       "      <td>248305</td>\n",
+       "      <td>1136</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>958160656</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1439,11 +1439,11 @@
       ],
       "text/plain": [
        "          userId  movieId  rating   timestamp\n",
-       "23050622  239407     3671     4.5  1334144851\n",
-       "12213863  126707     1513     5.0   982724582\n",
-       "24631755  255943    33794     5.0  1224477311\n",
-       "11506565  119419      589     5.0  1476208553\n",
-       "5401116    55678     7147     4.0  1478683223"
+       "13665623  142012      153     2.0  1120008806\n",
+       "12258491  127212     1073     5.0   865423058\n",
+       "20546169  213499       48     0.5  1344804003\n",
+       "9443457    97477      349     4.0   900519344\n",
+       "23911192  248305     1136     2.0   958160656"
       ]
      },
      "execution_count": 13,
@@ -29707,8 +29707,8 @@
       "text/plain": [
        "False                                                                                                                             45454\n",
        "True                                                                                                                                  9\n",
-       " Rune Balot goes to a casino connected to the October corporation to try to wrap up her case once and for all.                        1\n",
        " - Written by Ørnås                                                                                                                   1\n",
+       " Rune Balot goes to a casino connected to the October corporation to try to wrap up her case once and for all.                        1\n",
        " Avalanche Sharks tells the story of a bikini contest that turns into a horrifying affair when it is hit by a shark avalanche.        1\n",
        "Name: adult, dtype: int64"
       ]
@@ -31583,17 +31583,17 @@
     {
      "data": {
       "text/plain": [
-       "English                                5479\n",
-       "[English, Spanish]                       68\n",
-       "[English, French]                        35\n",
-       "[English, Japanese]                      25\n",
-       "[English, Russian]                       23\n",
-       "                                       ... \n",
-       "[Arabic, English]                         1\n",
-       "[English, Italian, Russian, German]       1\n",
-       "English/Hebrew                            1\n",
-       "[Bengali, English]                        1\n",
-       "[English, Somali]                         1\n",
+       "English                                 5479\n",
+       "[English, Spanish]                        68\n",
+       "[English, French]                         35\n",
+       "[English, Japanese]                       25\n",
+       "[English, Russian]                        23\n",
+       "                                        ... \n",
+       "[Aramaic, Latin, Hebrew]                   1\n",
+       "English/German/Korean                      1\n",
+       "[Spanish, Quechua]                         1\n",
+       "Hebrew                                     1\n",
+       "[Albanian, English, French, Spanish]       1\n",
        "Name: Language, Length: 197, dtype: int64"
       ]
      },
@@ -31615,17 +31615,17 @@
     {
      "data": {
       "text/plain": [
-       "English                                     5479\n",
-       "NaN                                          134\n",
-       "(English, Spanish)                            68\n",
-       "(English, French)                             35\n",
-       "(English, Japanese)                           25\n",
-       "                                            ... \n",
-       "(English, Cantonese, Japanese, Mandarin)       1\n",
-       "(Aramaic, [1], English, Portuguese)            1\n",
-       "(English, Russian, Ukrainian)                  1\n",
-       "(English, Scottish Gaelic, Irish)              1\n",
-       "(English, Mandarin, Cantonese)                 1\n",
+       "English                          5479\n",
+       "NaN                               134\n",
+       "(English, Spanish)                 68\n",
+       "(English, French)                  35\n",
+       "(English, Japanese)                25\n",
+       "                                 ... \n",
+       "(Dari, English)                     1\n",
+       "(English, Spanish, Inuktitut)       1\n",
+       "(English, Japanese, French)         1\n",
+       "Portuguese                          1\n",
+       "(English, German, Italian)          1\n",
        "Name: Language, Length: 198, dtype: int64"
       ]
      },
@@ -31657,14 +31657,14 @@
        "ja       4\n",
        "hi       2\n",
        "da       2\n",
-       "sv       1\n",
-       "ru       1\n",
-       "he       1\n",
-       "tr       1\n",
-       "ab       1\n",
        "ko       1\n",
-       "cn       1\n",
        "ar       1\n",
+       "ru       1\n",
+       "sv       1\n",
+       "tr       1\n",
+       "cn       1\n",
+       "ab       1\n",
+       "he       1\n",
        "Name: original_language, dtype: int64"
       ]
      },
@@ -32406,6 +32406,48 @@
     "                  'Composer(s)':'composers',\n",
     "                  'Based on':'based_on'\n",
     "                 }, axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#groupby and count then rename the \"userId\" column to \"count.\" then pivot this data so that movieId is the index, the columns will be all the rating values, and the rows will be the counts for each rating value.\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rename the columns so they're easier to understand. We'll prepend rating_ to each column with a list comprehension:\n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#left merge of ratings with movies df to keep everything in movies df. \n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#because not every movie got a rating for each rating level, there will be missing values instead of zeros. We have to fill those in ourselves:\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
    ]
   }
  ],
