--- a/Challenge_week_8/ETL_clean_kaggle_data.ipynb
+++ b/Challenge_week_8/ETL_clean_kaggle_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load(data1, data2, data3):\n",
+    "def extract_transform_load(a,b,c):\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
     "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
@@ -88,8 +88,12 @@
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # Write a list comprehension to filter out TV shows.\n",
-    "    wiki_movies = [movie for movie in wiki_movies_raw if 'No. of episodes' not in movie \n",
-    "                  and 'No. of seasons' not in movie]\n",
+    "    #wiki_movies = [movie for movie in wiki_movies_raw if 'No. of episodes' not in movie \n",
+    "                  #and 'No. of seasons' not in movie]\n",
+    "\n",
+    "    wiki_movies = [movie for movie in wiki_movies_raw\n",
+    "               if ('Director' in movie or 'Directed by' in movie)\n",
+    "                   and 'imdb_link' in movie]\n",
     "\n",
     "    # Write a list comprehension to iterate through the cleaned wiki movies list\n",
     "    # and call the clean_movie function on each movie.\n",
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,29 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7305\n",
-      "7050\n"
+      "7080\n",
+      "7037\n"
      ]
     }
    ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "data1 = \"wiki_file\"\n",
-    "data2 = \"kaggle_file\"\n",
-    "data3 = \"ratings_file\"\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(data1, data2, data3) \n"
+    "\n",
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +385,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>https://en.wikipedia.org/wiki/The_Adventures_o...</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0098987/</td>\n",
        "      <td>The Adventures of Ford Fairlane</td>\n",
        "      <td>[Characters, by Rex Weiner]</td>\n",
@@ -407,7 +409,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>https://en.wikipedia.org/wiki/After_Dark,_My_S...</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0098994/</td>\n",
        "      <td>After Dark, My Sweet</td>\n",
        "      <td>[the novel, After Dark, My Sweet, by, Jim Thom...</td>\n",
@@ -431,7 +433,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Air_America_(film)</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099005/</td>\n",
        "      <td>Air America</td>\n",
        "      <td>[Air America, by, Christopher Robbins]</td>\n",
@@ -455,7 +457,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Alice_(1990_film)</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099012/</td>\n",
        "      <td>Alice</td>\n",
        "      <td>NaN</td>\n",
@@ -479,7 +481,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Almost_an_Angel</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099018/</td>\n",
        "      <td>Almost an Angel</td>\n",
        "      <td>NaN</td>\n",
@@ -506,12 +508,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 url    year  \\\n",
-       "0  https://en.wikipedia.org/wiki/The_Adventures_o...  1990.0   \n",
-       "1  https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990.0   \n",
-       "2   https://en.wikipedia.org/wiki/Air_America_(film)  1990.0   \n",
-       "3    https://en.wikipedia.org/wiki/Alice_(1990_film)  1990.0   \n",
-       "4      https://en.wikipedia.org/wiki/Almost_an_Angel  1990.0   \n",
+       "                                                 url  year  \\\n",
+       "0  https://en.wikipedia.org/wiki/The_Adventures_o...  1990   \n",
+       "1  https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990   \n",
+       "2   https://en.wikipedia.org/wiki/Air_America_(film)  1990   \n",
+       "3    https://en.wikipedia.org/wiki/Alice_(1990_film)  1990   \n",
+       "4      https://en.wikipedia.org/wiki/Almost_an_Angel  1990   \n",
        "\n",
        "                               imdb_link                            title  \\\n",
        "0  https://www.imdb.com/title/tt0098987/  The Adventures of Ford Fairlane   \n",
@@ -572,7 +574,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +805,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1057,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
