--- a/Challenge_week_8/ETL_clean_wiki_movies.ipynb
+++ b/Challenge_week_8/ETL_clean_wiki_movies.ipynb
@@ -78,7 +78,7 @@
     "# 2 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load(data1, data2, data3):\n",
+    "def extract_transform_load(a,b,c):\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
     "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
@@ -88,9 +88,13 @@
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # 3. Write a list comprehension to filter out TV shows.\n",
-    "    wiki_movies = [movie for movie in wiki_movies_raw if 'No. of episodes' not in movie \n",
-    "                  and 'No. of seasons' not in movie]\n",
+    "    #wiki_movies = [movie for movie in wiki_movies_raw if 'No. of episodes' not in movie \n",
+    "                  #and 'No. of seasons' not in movie]\n",
     "\n",
+    "    wiki_movies = [movie for movie in wiki_movies_raw\n",
+    "               if ('Director' in movie or 'Directed by' in movie)\n",
+    "                   and 'imdb_link' in movie]\n",
+    "  \n",
     "    # 4. Write a list comprehension to iterate through the cleaned wiki movies list\n",
     "    # and call the clean_movie function on each movie.\n",
     "    clean_movies = [clean_movie(movie) for movie in wiki_movies]\n",
@@ -105,7 +109,6 @@
     "        print(len(wiki_movies_df))\n",
     "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
     "        print(len(wiki_movies_df))\n",
-    "        wiki_movies_df.head()\n",
     "        \n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -198,6 +201,8 @@
     "    running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n",
     "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\n",
     "    wiki_movies_df['running_time']\n",
+    "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
+    "\n",
     "    # Return three variables. The first is the wiki_movies_df DataFrame\n",
     "    \n",
     "    return wiki_movies_df, kaggle_metadata, ratings "
@@ -228,17 +233,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7305\n",
-      "7050\n"
+      "7080\n",
+      "7037\n"
      ]
     }
    ],
    "source": [
     "# 18. Set the three variables equal to the function created in D1.\n",
-    "data1 = \"wiki_file\"\n",
-    "data2 = \"kaggle_file\"\n",
-    "data3 = \"ratings_file\"\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(data1, data2, data3) "
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file) \n"
    ]
   },
   {
@@ -254,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -285,8 +289,8 @@
        "      <th>Starring</th>\n",
        "      <th>Cinematography</th>\n",
        "      <th>Release date</th>\n",
-       "      <th>Running time</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Language</th>\n",
        "      <th>...</th>\n",
        "      <th>Editor(s)</th>\n",
        "      <th>Composer(s)</th>\n",
@@ -304,15 +308,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>https://en.wikipedia.org/wiki/The_Adventures_o...</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0098987/</td>\n",
        "      <td>The Adventures of Ford Fairlane</td>\n",
        "      <td>[Characters, by Rex Weiner]</td>\n",
        "      <td>[Andrew Dice Clay, Wayne Newton, Priscilla Pre...</td>\n",
        "      <td>Oliver Wood</td>\n",
        "      <td>[July 11, 1990, (, 1990-07-11, )]</td>\n",
-       "      <td>102 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Michael Tronick</td>\n",
        "      <td>[Cliff Eidelman, Yello]</td>\n",
@@ -328,15 +332,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>https://en.wikipedia.org/wiki/After_Dark,_My_S...</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0098994/</td>\n",
        "      <td>After Dark, My Sweet</td>\n",
        "      <td>[the novel, After Dark, My Sweet, by, Jim Thom...</td>\n",
        "      <td>[Jason Patric, Rachel Ward, Bruce Dern, George...</td>\n",
        "      <td>Mark Plummer</td>\n",
        "      <td>[May 17, 1990, (, 1990-05-17, ), (Cannes Film ...</td>\n",
-       "      <td>114 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Howard E. Smith</td>\n",
        "      <td>Maurice Jarre</td>\n",
@@ -352,15 +356,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Air_America_(film)</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099005/</td>\n",
        "      <td>Air America</td>\n",
        "      <td>[Air America, by, Christopher Robbins]</td>\n",
        "      <td>[Mel Gibson, Robert Downey Jr., Nancy Travis, ...</td>\n",
        "      <td>Roger Deakins</td>\n",
        "      <td>[August 10, 1990, (, 1990-08-10, )]</td>\n",
-       "      <td>113 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>[English, Lao]</td>\n",
        "      <td>...</td>\n",
        "      <td>[John Bloom, Lois Freeman-Fox]</td>\n",
        "      <td>Charles Gross</td>\n",
@@ -376,15 +380,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Alice_(1990_film)</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099012/</td>\n",
        "      <td>Alice</td>\n",
        "      <td>NaN</td>\n",
        "      <td>[Alec Baldwin, Blythe Danner, Judy Davis, Mia ...</td>\n",
        "      <td>Carlo Di Palma</td>\n",
        "      <td>[December 25, 1990, (, 1990-12-25, )]</td>\n",
-       "      <td>106 minutes</td>\n",
        "      <td>United States</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>Susan E. Morse</td>\n",
        "      <td>NaN</td>\n",
@@ -400,15 +404,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Almost_an_Angel</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>1990</td>\n",
        "      <td>https://www.imdb.com/title/tt0099018/</td>\n",
        "      <td>Almost an Angel</td>\n",
        "      <td>NaN</td>\n",
        "      <td>[Paul Hogan, Elias Koteas, Linda Kozlowski]</td>\n",
        "      <td>Russell Boyd</td>\n",
        "      <td>December 19, 1990</td>\n",
-       "      <td>95 minutes</td>\n",
        "      <td>US</td>\n",
+       "      <td>English</td>\n",
        "      <td>...</td>\n",
        "      <td>David Stiven</td>\n",
        "      <td>Maurice Jarre</td>\n",
@@ -423,16 +427,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 url    year  \\\n",
-       "0  https://en.wikipedia.org/wiki/The_Adventures_o...  1990.0   \n",
-       "1  https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990.0   \n",
-       "2   https://en.wikipedia.org/wiki/Air_America_(film)  1990.0   \n",
-       "3    https://en.wikipedia.org/wiki/Alice_(1990_film)  1990.0   \n",
-       "4      https://en.wikipedia.org/wiki/Almost_an_Angel  1990.0   \n",
+       "                                                 url  year  \\\n",
+       "0  https://en.wikipedia.org/wiki/The_Adventures_o...  1990   \n",
+       "1  https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990   \n",
+       "2   https://en.wikipedia.org/wiki/Air_America_(film)  1990   \n",
+       "3    https://en.wikipedia.org/wiki/Alice_(1990_film)  1990   \n",
+       "4      https://en.wikipedia.org/wiki/Almost_an_Angel  1990   \n",
        "\n",
        "                               imdb_link                            title  \\\n",
        "0  https://www.imdb.com/title/tt0098987/  The Adventures of Ford Fairlane   \n",
@@ -455,19 +459,19 @@
        "3  [Alec Baldwin, Blythe Danner, Judy Davis, Mia ...  Carlo Di Palma   \n",
        "4        [Paul Hogan, Elias Koteas, Linda Kozlowski]    Russell Boyd   \n",
        "\n",
-       "                                        Release date Running time  \\\n",
-       "0                  [July 11, 1990, (, 1990-07-11, )]  102 minutes   \n",
-       "1  [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...  114 minutes   \n",
-       "2                [August 10, 1990, (, 1990-08-10, )]  113 minutes   \n",
-       "3              [December 25, 1990, (, 1990-12-25, )]  106 minutes   \n",
-       "4                                  December 19, 1990   95 minutes   \n",
+       "                                        Release date        Country  \\\n",
+       "0                  [July 11, 1990, (, 1990-07-11, )]  United States   \n",
+       "1  [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...  United States   \n",
+       "2                [August 10, 1990, (, 1990-08-10, )]  United States   \n",
+       "3              [December 25, 1990, (, 1990-12-25, )]  United States   \n",
+       "4                                  December 19, 1990             US   \n",
        "\n",
-       "         Country  ...                       Editor(s)  \\\n",
-       "0  United States  ...                 Michael Tronick   \n",
-       "1  United States  ...                 Howard E. Smith   \n",
-       "2  United States  ...  [John Bloom, Lois Freeman-Fox]   \n",
-       "3  United States  ...                  Susan E. Morse   \n",
-       "4             US  ...                    David Stiven   \n",
+       "         Language  ...                       Editor(s)  \\\n",
+       "0         English  ...                 Michael Tronick   \n",
+       "1         English  ...                 Howard E. Smith   \n",
+       "2  [English, Lao]  ...  [John Bloom, Lois Freeman-Fox]   \n",
+       "3         English  ...                  Susan E. Morse   \n",
+       "4         English  ...                    David Stiven   \n",
        "\n",
        "               Composer(s)                  Producer(s)  \\\n",
        "0  [Cliff Eidelman, Yello]   [Steve Perry, Joel Silver]   \n",
@@ -483,14 +487,14 @@
        "3                                    NaN                   Woody Allen   \n",
        "4                                    NaN                    Paul Hogan   \n",
        "\n",
-       "     imdb_id  box_office      budget release_date running_time  \n",
-       "0  tt0098987  21400000.0  20000000.0   1990-07-11        102.0  \n",
-       "1  tt0098994   2700000.0   6000000.0   1990-05-17        114.0  \n",
-       "2  tt0099005  57718089.0  35000000.0   1990-08-10        113.0  \n",
-       "3  tt0099012   7331647.0  12000000.0   1990-12-25        106.0  \n",
-       "4  tt0099018   6939946.0  25000000.0   1990-12-19         95.0  \n",
+       "     imdb_id  box_office      budget release_date  running_time  \n",
+       "0  tt0098987  21400000.0  20000000.0   1990-07-11         102.0  \n",
+       "1  tt0098994   2700000.0   6000000.0   1990-05-17         114.0  \n",
+       "2  tt0099005  57718089.0  35000000.0   1990-08-10         113.0  \n",
+       "3  tt0099012   7331647.0  12000000.0   1990-12-25         106.0  \n",
+       "4  tt0099018   6939946.0  25000000.0   1990-12-19          95.0  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
      "execution_count": 7,
@@ -506,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -519,7 +525,6 @@
        " 'Starring',\n",
        " 'Cinematography',\n",
        " 'Release date',\n",
-       " 'Running time',\n",
        " 'Country',\n",
        " 'Language',\n",
        " 'Budget',\n",
