--- a/Challenge_week_8/ETL_function_test.ipynb
+++ b/Challenge_week_8/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "# 1. Create a function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load(data1, data2, data3):\n",
+    "def extract_transform_load(a,b,c):\n",
     "    \n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
@@ -48,15 +48,12 @@
     "ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "data1 = \"wiki_file\"\n",
-    "data2 = \"kaggle_file\"\n",
-    "data3 = \"ratings_file\"\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(data1, data2, data3) \n"
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +298,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -546,7 +545,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +636,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
