--- a/Challenge_week_8/ETL_create_database.ipynb
+++ b/Challenge_week_8/ETL_create_database.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,31 @@
       "7037\n",
       "importing rows 0 to 1000000...Done. 141.3055214881897 total seconds elapsed\n",
       "importing rows 1000000 to 2000000...Done. 282.43532705307007 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000..."
+      "importing rows 2000000 to 3000000...Done. 418.21234822273254 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 541.1361365318298 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 666.7835228443146 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 815.2979049682617 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 931.7080414295197 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 1053.8201417922974 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 1172.149266242981 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 1289.2379188537598 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 1407.0613503456116 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 1523.8438754081726 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 1645.0523328781128 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 1761.6307756900787 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 1878.9570326805115 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 1995.5274443626404 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 2113.2906172275543 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 2229.668148756027 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 2347.326047182083 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 2463.66237449646 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 2579.834088563919 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 2698.862131357193 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 2814.8144381046295 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 2931.70388174057 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 3066.3475992679596 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 3182.9371144771576 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 3185.6836593151093 total seconds elapsed\n"
      ]
     }
    ],
@@ -342,24 +366,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 12. Set the DataFrames from the return statement equal to the file names in Step 11. \n",
-    "wiki_movies_df = wiki_file\n",
-    "movies_with_ratings_df = kaggle_file\n",
-    "movies_df = ratings_file"
+    "# wiki_movies_df = wiki_file\n",
+    "# movies_with_ratings_df = kaggle_file\n",
+    "# movies_df = ratings_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-32d9c285f845>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 13. Check the wiki_movies_df DataFrame.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_movies_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'head'"
+     ]
+    }
+   ],
    "source": [
     "# 13. Check the wiki_movies_df DataFrame. \n",
-    "wiki_movies_df.head()"
+    "# wiki_movies_df.head()"
    ]
   },
   {
@@ -369,7 +405,7 @@
    "outputs": [],
    "source": [
     "# 14. Check the movies_with_ratings_df DataFrame.\n",
-    "movies_with_ratings_df.head()"
+    "# movies_with_ratings_df.head()"
    ]
   },
   {
@@ -379,7 +415,7 @@
    "outputs": [],
    "source": [
     "# 15. Check the movies_df DataFrame. \n",
-    "movies_df.head()"
+    "# movies_df.head()"
    ]
   },
   {
